fixed item width overlap issue between preview and collection pages

--- a/src/components/collection-item/CollectionItemComponent.module.css
+++ b/src/components/collection-item/CollectionItemComponent.module.css
@@ -1,12 +1,12 @@
 .collection-item {
-  width: 22vw;
+  min-width: 15vw;
   display: flex;
   flex-direction: column;
   height: 350px;
   align-items: center;
   position: relative;
-  /* background-color: orange; */
 }
+
 .collection-item .image {
   width: 100%;
   height: 95%;
@@ -14,6 +14,7 @@
   background-position: center;
   margin-bottom: 5px;
 }
+
 .collection-item .actionbutton {
   width: 80%;
   opacity: 0.7;
@@ -21,6 +22,7 @@
   top: 245px;
   display: none;
 }
+
 .collection-item:hover .image {
   opacity: 0.8;
 }
